--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,80 @@
+:root {
+  --gray30: #212121;
+  --gray20: #212429;
+  --gray10: #616161;
+}
+
 body {
-  background-color: slateblue;
-  color: white;
+  background-color: white;
+  color: var(--gray30);
+  font-family: "Roboto", system-ui, sans-serif;
+}
+
+header {
+  font-size: 14px;
+  color: var(--gray10);
+}
+
+header a {
+  color: var(--gray10);
+  text-decoration: none;
+}
+
+header a:hover {
+  color: teal;
+}
+
+nav details summary {
+  font-weight: bold;
+}
+
+h1 {
+  font-size: 3.75em;
+}
+
+h2 {
+  font-size: 2em;
+}
+
+h3 {
+  font-size: 1.5em;
+}
+
+.content h3 {
+  counter-increment: titleList;
+}
+
+.content h3::before {
+  content: counter(titleList, decimal);
+}
+
+.content h3::after {
+  content: "";
+  width: 192px;
+  height: 4px;
+  background: var(--gray20);
+  display: block;
+}
+
+.content {
+  counter-reset: titleList;
+}
+
+pre {
+  background-color: #fec62e;
+}
+
+.hero {
+  background-image: linear-gradient(
+      to top,
+      rgba(255, 255, 255, 0.2),
+      transparent
+    ),
+    url("../img/patron-1.png");
+  height: 350px;
+  border-radius: 8px;
+}
+
+::selection {
+  background: teal;
 }
