--- a/css/style-logical.css
+++ b/css/style-logical.css
@@ -1,80 +1,179 @@
 :root {
+  --white: #ffffff;
+  --white20: #a5a3a5;
   --gray30: #212121;
   --gray20: #212429;
   --gray10: #616161;
+  --black: #251f24;
+}
+
+::selection {
+  background: teal;
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 body {
-  background-color: white;
-  color: var(--gray30);
-  font-family: "Roboto", system-ui, sans-serif;
+  margin: 0;
+  background-color: var(--black);
+  color: var(--white);
+  font-family: "Nunito", system-ui, sans-serif;
+}
+
+.hero {
+  background: linear-gradient(96.07deg, #314755 30.63%, #26a0da 102.18%);
+  height: 350px;
 }
 
 header {
   font-size: 14px;
-  color: var(--gray10);
+  width: 188px;
+  color: var(--white);
+  position: absolute;
+  top: 64px;
+  left: -232px;
 }
 
 header a {
-  color: var(--gray10);
+  color: var(--white20);
   text-decoration: none;
+}
+
+header li {
+  color: var(--white20);
+  margin-bottom: 16px;
 }
 
 header a:hover {
   color: teal;
 }
 
+.header {
+  position: sticky;
+  top: 0;
+}
+
+.header-content {
+  position: relative;
+}
+
+.main {
+  background: var(--black);
+}
+
+.main-content {
+  padding: 0 20px;
+}
+
+.wrapper {
+  max-inline-size: 902px;
+  margin: auto;
+}
+
 nav details summary {
   font-weight: bold;
+  line-height: 24px;
+}
+
+hr {
+  margin: 64px 0;
+  border-color: var(--gray10);
+  opacity: 20%;
 }
 
 h1 {
+  margin-top: 64px;
+  margin-bottom: 16px;
   font-size: 3.75em;
+  font-weight: 400;
 }
 
 h2 {
+  margin: 64px 0 40px;
   font-size: 2em;
+  font-weight: normal;
 }
 
 h3 {
+  margin: 8px 0 16px;
+  padding: 8px 0;
   font-size: 1.5em;
+  font-weight: normal;
+  position: sticky;
+  top: 0;
+  background: var(--black);
 }
 
 .content h3 {
   counter-increment: titleList;
+  padding-bottom: 8px;
 }
 
 .content h3::before {
-  content: counter(titleList, decimal);
+  content: counter(titleList, decimal) ". ";
 }
 
 .content h3::after {
   content: "";
   width: 192px;
   height: 4px;
-  background: var(--gray20);
-  display: block;
+  background: var(--white20);
+  position: absolute;
+  left: 0;
+  bottom: 0;
+}
+
+p {
+  color: var(--white20);
 }
 
 .content {
   counter-reset: titleList;
 }
 
+.content:first-of-type {
+  margin: 64;
+}
+
+.content img {
+  margin-top: 40px;
+  max-inline-size: 100%;
+}
+
+.content + hr {
+  display: none;
+}
+
+.content ul li {
+  margin-bottom: 16px;
+}
+
+.content ol li {
+  line-height: 24px;
+}
+
 pre {
+  padding: 40px;
   background-color: #fec62e;
+  color: var(--black);
+  line-height: 24px;
+  font-size: 16px;
 }
 
-.hero {
-  background-image: linear-gradient(
-      to top,
-      rgba(255, 255, 255, 0.2),
-      transparent
-    ),
-    url("../img/patron-1.png");
-  height: 350px;
-  border-radius: 8px;
+blockquote {
+  font-size: 24px;
+  margin: 32px 0;
+  padding-left: 16px;
+  border-left: 4px solid var(--gray20);
+  line-height: 24px;
 }
 
-::selection {
-  background: teal;
+blockquote span {
+  color: var(--gray10);
+}
+
+blockquote span::before {
+  content: "-";
 }
