--- a/css/style-logical.css
+++ b/css/style-logical.css
@@ -185,3 +185,34 @@ blockquote span {
 blockquote span::before {
   content: "-";
 }
+
+.slider_container {
+  display: block;
+  overflow: hidden;
+  scroll-behavior: smooth;
+  white-space: nowrap;
+  font-size: 0;
+}
+
+.slider_bullet_list {
+  margin-block-start: 16px;
+  text-align: center;
+}
+
+.slider_bullet {
+  display: inline-block;
+  inline-size: 12px;
+  block-size: 12px;
+  background-color: var(--white);
+  border-radius: 50%;
+  margin-inline: 4px;
+}
+
+.video {
+  margin: 0;
+  display: inline-block;
+  width: 100%;
+  height: auto;
+  aspect-ratio: 16/9;
+  border-radius: 16px;
+}
